--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
         </div>
         <h3>Email</h3>
         <p2>jesurati@outlook.com</p2>
-        <h3>Phone Number</h3>
-        <p2>(317)-587-8787</p2>
+        <p2batteryboyeetu@gmail.com</p2>
+        
      
 
         <footer>
