--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         </div>
         <h3>Email</h3>
         <p2>jesurati@outlook.com</p2>
-        <p2batteryboyeetu@gmail.com</p2>
+        <p2>batteryboyeetu@gmail.com</p2>
         
      
 
