--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
         </div>
         <h3>Email</h3>
         <p2>jesurati@outlook.com</p2>
+        <div> 
         <p2>batteryboyeetu@gmail.com</p2>
         
      
