--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="msc.html">Other Links</a></li>
+        <h2>Websites I have built</h2>
+            <li><a heref="bdryswi.com">Bdry site</li>
         </ul>
     </nav>
 
