--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="msc.html">Other Links</a></li>
         <h2>Websites I have built</h2>
-            <li><a heref="bdryswi.com">Bdry site</li>
+           <li><a href="https://bdryswi.com">Bdry site</a></li>
+
         </ul>
     </nav>
 
