--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="msc.html">Other Links</a></li>
         <h2>Websites I have built</h2>
            <li><a href="https://bdryswi.com">Bdry site</a></li>
+           <li><a href="https://turpenspainting.com">Turpen's Painting</a></li>
 
         </ul>
     </nav>
