--- a/msc.html
+++ b/msc.html
@@ -43,7 +43,9 @@
             <p>© 2024 Ethan Surati. All rights reserved.</p>
         </footer>
     </div>
-
+<canvas id="fractal-canvas"></canvas>
+<button id="menu-toggle">☰</button>
+<script src="fractal.js"></script>
 </body>
 
 </html>
