--- a/index.html
+++ b/index.html
@@ -828,6 +828,7 @@
 
                     <div class="project-card">
                         <img src="https://i.postimg.cc/zfLhbDwz/72334883673-0-E6-AB060-D173-4318-AB25-0-CB66-BFA2068.jpg" alt="Noble 6 Helmet" class="project-image">
+                         <a href="mailto:jesurati@outlook.com"/a>
                         <div class="project-content">
                             <h3>Noble 6 Helmet</h3>
                             <p>Halo: Reach Noble Six helmet with custom visor featuring intricate game-accurate details.</p>
@@ -1085,4 +1086,5 @@
         });
     </script>
 </body>
+
 </html>
