--- a/props.html
+++ b/props.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>3D Printed Props - Ethan Surati</title>
     <link rel="stylesheet" href="pro.css">
+    <link rel="stylesheet" href="props.css">
 </head>
 
 <body>
@@ -39,9 +40,54 @@
     <!-- Content -->
     <div id="content">
         <div id="title">
-        <h1>Projects</h1>
+        <h1>3D Printed Props</h1>
         </div>
-        <p>This is the projects section here I store data on my past projects and crafts</p>
+        <p>Click on any project below to view details about the build process and final results.</p>
+
+        <!-- Projects Grid -->
+        <div class="projects-grid">
+            <a href="thorn.html" class="project-card">
+                <div class="project-card-content">
+                    <h3>Thorn Project</h3>
+                    <p>Hand cannon from Destiny and Destiny 2</p>
+                </div>
+            </a>
+
+            <a href="sth.html" class="project-card">
+                <div class="project-card-content">
+                    <h3>Scout Trooper Helmet</h3>
+                    <p>Star Wars scout trooper replica</p>
+                </div>
+            </a>
+
+            <a href="n6.html" class="project-card">
+                <div class="project-card-content">
+                    <h3>Noble 6 Helmet</h3>
+                    <p>Halo Reach armor helmet</p>
+                </div>
+            </a>
+
+            <a href="ar.html" class="project-card">
+                <div class="project-card-content">
+                    <h3>Halo Assault Rifle</h3>
+                    <p>Iconic Halo weapon replica</p>
+                </div>
+            </a>
+
+            <a href="gg.html" class="project-card">
+                <div class="project-card-content">
+                    <h3>Green Goblin Mask</h3>
+                    <p>Spider-Man villain mask</p>
+                </div>
+            </a>
+
+            <a href="dt.html" class="project-card">
+                <div class="project-card-content">
+                    <h3>Death Trooper Helmet</h3>
+                    <p>Star Wars Imperial helmet</p>
+                </div>
+            </a>
+        </div>
 
         <footer>
             <p>© 2024 Ethan Surati. All rights reserved.</p>
@@ -50,52 +96,5 @@
 
 </body>
 
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<script src= "pro.js"></script>
+<script src="pro.js"></script>
 </html>
