--- a/index.html
+++ b/index.html
@@ -794,54 +794,85 @@
             <h2 class="section-title">3D Printing & Props</h2>
             <div class="projects-section" id="physicalProjectsSection">
                 <div class="projects-grid">
-                    <div class="project-card">
+                    <a href="sth.html" class="project-card" style="text-decoration: none; color: inherit;">
                         <img src="https://i.postimg.cc/rFdfTT3k/IMG-0866.jpg" alt="Scout Trooper Helmet" class="project-image">
                         <div class="project-content">
                             <h3>Scout Trooper Helmet</h3>
                             <p>Fully functional Star Wars Scout Trooper helmet with opening visor, custom decals, and weathered finish.</p>
                         </div>
-                    </div>
+                    </a>
                     
-                    <div class="project-card">
+                    <a href="thorn.html" class="project-card" style="text-decoration: none; color: inherit;">
                         <img src="https://i.postimg.cc/prH6T6FZ/IMG-2870.jpg" alt="Thorn Hand Cannon" class="project-image">
                         <div class="project-content">
                             <h3>Thorn Hand Cannon</h3>
                             <p>Life-size replica of the iconic Destiny hand cannon with working cylinder and ammunition storage.</p>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="project-card">
+                    <a href="gg.html" class="project-card" style="text-decoration: none; color: inherit;">
                         <img src="https://i.postimg.cc/HxK7SrXW/IMG-7081-1.jpg" alt="Green Goblin Mask" class="project-image">
                         <div class="project-content">
                             <h3>Green Goblin Mask</h3>
                             <p>Wearable mask with color-changing paint and repurposed sun visor lenses for authentic visibility.</p>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="project-card">
+                    <a href="ar.html" class="project-card" style="text-decoration: none; color: inherit;">
                         <img src="https://i.postimg.cc/ncmqPG3y/IMG-0768.jpg" alt="Halo Assault Rifle" class="project-image">
                         <div class="project-content">
                             <h3>Halo Assault Rifle</h3>
                             <p>Full-size Halo: Reach assault rifle replica with removable magazine and custom display stand.</p>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="project-card">
+                    <a href="n6.html" class="project-card" style="text-decoration: none; color: inherit;">
                         <img src="https://i.postimg.cc/zfLhbDwz/72334883673-0-E6-AB060-D173-4318-AB25-0-CB66-BFA2068.jpg" alt="Noble 6 Helmet" class="project-image">
-                         <a href="mailto:jesurati@outlook.com"/a>
                         <div class="project-content">
                             <h3>Noble 6 Helmet</h3>
                             <p>Halo: Reach Noble Six helmet with custom visor featuring intricate game-accurate details.</p>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="project-card">
+                    <a href="dt.html" class="project-card" style="text-decoration: none; color: inherit;">
                         <img src="https://i.postimg.cc/FshSskmq/IMG-0489.jpg" alt="Death Trooper Helmet" class="project-image">
                         <div class="project-content">
                             <h3>Death Trooper Helmet</h3>
                             <p>Early project showcasing growth in 3D printing and finishing techniques from Star Wars.</p>
                         </div>
-                    </div>
+                    </a>
+
+                    <a href="ncr.html" class="project-card" style="text-decoration: none; color: inherit;">
+                        <img src="C:\Users\test\Downloads\ethansurati-main\b3492dc5-b7d1-4df5-9b63-d3d53f7d9639.jpg" alt="NCR Ranger Helmet" class="project-image">
+                        <div class="project-content">
+                            <h3>NCR Ranger Helmet</h3>
+                            <p>Iconic helmet from Fallout: New Vegas with weathered wasteland finish.</p>
+                        </div>
+                    </a>
+
+                    <a href="maximillian.html" class="project-card" style="text-decoration: none; color: inherit;">
+                        <img src="C:\Users\test\Downloads\ethansurati-main\118c0657-a04a-485d-9e34-4691b33cbf1c.jpg" alt="Maximillian Armor" class="project-image">
+                        <div class="project-content">
+                            <h3>Maximillian Armor</h3>
+                            <p>Detailed medieval armor replica with authentic historical design elements.</p>
+                        </div>
+                    </a>
+
+                    <a href="tie-pilot.html" class="project-card" style="text-decoration: none; color: inherit;">
+                        <img src="C:\Users\test\Downloads\ethansurati-main\51419355-0194-4397-a7f9-59ca731b7478.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
+                        <div class="project-content">
+                            <h3>TIE Fighter Pilot Helmet</h3>
+                            <p>Imperial pilot helmet from Star Wars with accurate detailing and finish.</p>
+                        </div>
+                    </a>
+
+                    <a href="warhammer.html" class="project-card" style="text-decoration: none; color: inherit;">
+                        <img src="C:\Users\test\Downloads\ethansurati-main\1c83c264-4abb-419f-8a86-ccabd7aa4d2a.jpg" alt="Warhammer Miniature" class="project-image">
+                        <div class="project-content">
+                            <h3>Warhammer Miniature</h3>
+                            <p>Intricately painted tabletop gaming miniature with fine detail work.</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
