--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                     </a>
 
                     <a href="ncr.html" class="project-card" style="text-decoration: none; color: inherit;">
-                        <img src="C:\Users\test\Downloads\ethansurati-main\b3492dc5-b7d1-4df5-9b63-d3d53f7d9639.jpg" alt="NCR Ranger Helmet" class="project-image">
+                        <img src="ethansurati-main\b3492dc5-b7d1-4df5-9b63-d3d53f7d9639.jpg" alt="NCR Ranger Helmet" class="project-image">
                         <div class="project-content">
                             <h3>NCR Ranger Helmet</h3>
                             <p>Iconic helmet from Fallout: New Vegas with weathered wasteland finish.</p>
@@ -851,7 +851,7 @@
                     </a>
 
                     <a href="maximillian.html" class="project-card" style="text-decoration: none; color: inherit;">
-                        <img src="C:\Users\test\Downloads\ethansurati-main\118c0657-a04a-485d-9e34-4691b33cbf1c.jpg" alt="Maximillian Armor" class="project-image">
+                        <img src="ethansurati-main\118c0657-a04a-485d-9e34-4691b33cbf1c.jpg" alt="Maximillian Armor" class="project-image">
                         <div class="project-content">
                             <h3>Maximillian Armor</h3>
                             <p>Detailed medieval armor replica with authentic historical design elements.</p>
