--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                     </a>
 
                     <a href="warhammer.html" class="project-card" style="text-decoration: none; color: inherit;">
-                        <img src="C:\Users\test\Downloads\ethansurati-main\1c83c264-4abb-419f-8a86-ccabd7aa4d2a.jpg" alt="Warhammer Miniature" class="project-image">
+                        <img src="1c83c264-4abb-419f-8a86-ccabd7aa4d2a.jpg" alt="Warhammer Miniature" class="project-image">
                         <div class="project-content">
                             <h3>Warhammer Miniature</h3>
                             <p>Intricately painted tabletop gaming miniature with fine detail work.</p>
