--- a/tie-pilot.html
+++ b/tie-pilot.html
@@ -45,7 +45,7 @@
 
                 <div class="project-content">
                     <!-- Replace this placeholder URL with your actual image URL -->
-                    <img src="C:\Users\test\Downloads\ethansurati-main\51419355-0194-4397-a7f9-59ca731b7478.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
+                    <img src=51419355-0194-4397-a7f9-59ca731b7478.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
                     
                     <div class="content-section">
                         <h2>About the Build</h2>
@@ -60,7 +60,7 @@
                     </div>
 
                     <!-- Replace this placeholder URL with your actual detail image URL -->
-                   <img src="C:\Users\test\Downloads\ethansurati-main\ed8187c7-f8eb-4f6e-9774-43d8088275ee.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
+                   <img src="ed8187c7-f8eb-4f6e-9774-43d8088275ee.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
 
                     <div class="content-section">
                         <h3>Key Features</h3>
