--- a/warhammer.html
+++ b/warhammer.html
@@ -45,7 +45,7 @@
 
                 <div class="project-content">
                     <!-- Replace this placeholder URL with your actual image URL -->
-                    <img src="C:\Users\test\Downloads\ethansurati-main\1c83c264-4abb-419f-8a86-ccabd7aa4d2a.jpg" alt="Warhammer Miniature" class="project-image">
+                    <img src="1c83c264-4abb-419f-8a86-ccabd7aa4d2a.jpg" alt="Warhammer Miniature" class="project-image">
                     
                     <div class="content-section">
                         <h2>About the Build</h2>
