--- a/ncr.html
+++ b/ncr.html
@@ -45,7 +45,7 @@
 
                 <div class="project-content">
                     <!-- Replace this placeholder URL with your actual image URL -->
-                    <img src="C:\Users\test\Downloads\ethansurati-main\b3492dc5-b7d1-4df5-9b63-d3d53f7d9639.jpg" alt="NCR Ranger Helmet" class="project-image">
+                    <img src="b3492dc5-b7d1-4df5-9b63-d3d53f7d9639.jpg" alt="NCR Ranger Helmet" class="project-image">
                     
                     <div class="content-section">
                         <h2>About the Build</h2>
