--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                     </a>
 
                     <a href="tie-pilot.html" class="project-card" style="text-decoration: none; color: inherit;">
-                        <img src="C:\Users\test\Downloads\51419355-0194-4397-a7f9-59ca731b7478.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
+                        <img src="51419355-0194-4397-a7f9-59ca731b7478.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
                         <div class="project-content">
                             <h3>TIE Fighter Pilot Helmet</h3>
                             <p>Imperial pilot helmet from Star Wars with accurate detailing and finish.</p>
