--- a/maximillian.html
+++ b/maximillian.html
@@ -46,7 +46,7 @@
                 <div class="project-content">
                     <!-- Replace this placeholder URL with your actual image URL -->
                      
-                    <img src="C:\Users\test\Downloads\ethansurati-main\118c0657-a04a-485d-9e34-4691b33cbf1c.jpg" alt="Maximillian Armor Detail" class="project-image">
+                    <img src="118c0657-a04a-485d-9e34-4691b33cbf1c.jpg" alt="Maximillian Armor Detail" class="project-image">
 
                     <div class="content-section">
                         <h2>About the Build</h2>
@@ -60,7 +60,7 @@
                     </div>
 
                     <!-- Replace this placeholder URL with your actual detail image URL -->
-                    <img src="C:\Users\test\Downloads\ethansurati-main\af365e78-cd94-446c-b314-0f721bb9a9c2.jpg" alt="Maximillian Armor Detail" class="project-image">
+                    <img src="af365e78-cd94-446c-b314-0f721bb9a9c2.jpg" alt="Maximillian Armor Detail" class="project-image">
                     <div class="content-section">
                         <h3>Key Features</h3>
                         <p>
