--- a/tie-pilot.html
+++ b/tie-pilot.html
@@ -60,7 +60,7 @@
                     </div>
 
                     <!-- Replace this placeholder URL with your actual detail image URL -->
-                   <img src="ed8187c7-f8eb-4f6e-9774-43d8088275ee.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
+                   <img src=https://i.postimg.cc/QdtByK0t/51419355_0194_4397_a7f9_59ca731b7478.jpg alt="TIE Fighter Pilot Helmet" class="project-image">
 
                     <div class="content-section">
                         <h3>Key Features</h3>
