--- a/tie-pilot.html
+++ b/tie-pilot.html
@@ -45,7 +45,7 @@
 
                 <div class="project-content">
                     <!-- Replace this placeholder URL with your actual image URL -->
-                    <img src=51419355-0194-4397-a7f9-59ca731b7478.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
+                    <img src="51419355-0194-4397-a7f9-59ca731b7478.jpg" alt="TIE Fighter Pilot Helmet" class="project-image">
                     
                     <div class="content-section">
                         <h2>About the Build</h2>
